# Limited-amplitude

./: .gitignore  README.md  pyproject.toml
data/: default_exclude_codes.txt  species and references.csv
examples/: example_workflow.ipynb
src/limited_amplitude/: __init__.py  __main__.py  cli.py  distance_truncation.py  occurrence.py
tests/: __init__.py  generate_reference_data.py  test_distance_truncation.py  test_integration.py  test_occurrence.py
tests/test_data/: README.md
